--- a/country.css
+++ b/country.css
@@ -28,6 +28,7 @@ body{
     max-width:1200px;
     margin-inline:auto;
     margin-block:20px;
+    margin-top:50px;
    
 }
 .back{
@@ -35,6 +36,7 @@ body{
     padding:4px 16px;
     border-radius:4px;
     cursor:pointer;
+    
 }
 
 
