--- a/style.css
+++ b/style.css
@@ -4,9 +4,15 @@
     box-sizing:border-box;
 }
 body{
+    --background-color:white;
+    --text-color:black;
+    --elements-color:white;
     margin:0;
     padding:0;
     font-family:Nunito;
+    background-color:var(--background-color);
+    color:var(--text-color);
+   
 }
 .header-content{
     display:flex;
@@ -20,8 +26,9 @@ body{
 }
 .header-container{
     box-shadow:0px 1px 4px 0px rgba(0,0,0,0.1);
-    margin-inline:auto;
-    padding-inline:20px;  
+    background-color:var(--elements-color);
+    
+    
 }
 .countries-card{
     max-width:1200px;
@@ -29,7 +36,7 @@ body{
     margin-block:20px;
     display:flex;
     flex-wrap:wrap;
-    gap:2rem;
+    gap:4rem;
 }
 
 .country-card{
@@ -40,6 +47,8 @@ body{
     overflow:hidden;
     padding-bottom:20px;
     transition:all 0.2s ease-in;
+    background-color:var(--elements-color);
+
     
     
 }
@@ -64,4 +73,72 @@ margin-block:10px;
 
 .card-content p{
     margin-block:8px;
+}
+
+.search-filter-container{
+    max-width:1200px;
+    margin-inline:auto; 
+    margin-top:30px;
+    display:flex;
+    justify-content:space-between;
+    flex-wrap:wrap;
+}
+.search-container{
+    
+    box-shadow:0px 1px 4px 0px rgba(0,0,0,0.1);
+    padding-block:15px;
+    padding-left:20px;
+    width:400px;
+    border-radius:4px;
+    display:flex;
+    align-items:center;
+    gap:16px;
+    background-color:var(--elements-color);
+    color:var(--text-color)
+    
+    
+}
+.search-container input{
+      border:none;
+      outline:none;
+    width:100%;
+    font-size:1rem;
+    color:rgb(161, 158, 158);
+    background-color: inherit;
+    color:inherit
+}
+.search-container input::placeholder{
+    color:rgb(161, 158, 158);
+}
+.filter-by-region{
+    background-color:var(--elements-color);
+    color:var(--text-color)
+}
+select{
+    padding:10px;
+}
+.theme-change{
+    cursor: pointer;
+}
+@media(max-width:500px){
+    .search-filter-container{
+        flex-direction:column;
+        gap:8px;
+    }
+    .header-content{
+        /* width:100%; */
+    }
+    .countries-card{
+        padding-left:20px;
+        margin:0 auto;
+    }
+   
+   
+
+}
+body.dark{
+    --background-color:hsl(207,26%,17%);
+    --text-color:white;
+    --elements-color:hsl(209,23%,22%);
+    
 }
